[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Javier Arevalo <javier.arevalo@gmail.com>"]

[dependencies]
anyhow = "*"
regex = "*"
structopt = { version = "*", default-features = false }
lazy_static = "*"
random = "*"
itertools = "*"

[dev-dependencies]
criterion = {version = "*", features = ["html_reports"] }

[[bin]]
name = "aoc2021"
bench = false

[lib]
bench = false

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day3"
harness = false
